--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title> Alessio </title>
   </head>
   <body>
+    <h1> <em> Hello, Code School! </em> </h1>
+    <ul>
 
+      <li>Php</li>
+      <li>Phyton</li>
+       
+    </ul>
   </body>
 </html>
