--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title> Alessio </title>
   </head>
   <body>
-    <h1> <em>Hello, Code School!</em> </h1>
+    <h1>Hello, Code School!</h1>
     <ul>
 
       <li>Php</li>
